<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Påfyll</string>
    <string name="view_products_btn">Se produkter</string>

    <!-- Product strings -->
    <string name="product_name">Produktnavn</string>
    <string name="product_image">Produktbilde</string>
    <string name="product_price">Pris</string>
    <string name="prodcut_liter_price">Literpris</string>
    <string name="product_volume" tools:ignore="ExtraTranslation">Volum</string>
    <string name="product_tase">Smak</string>
    <string name="product_freshness">Friskhet</string>
    <string name="product_fullness">Fylde</string>
    <string name="product_Sweetness">Sødme</string>
    <string name="product_tannin">Garvestoff</string>
    <string name="product_bitterness">Bitterhet</string>
    <string name="product_feedstock">Råstoff</string>
    <string name="product_drinkWith">Passer til</string>
    <string name="product_perLiter">per liter</string>
    <string name="product_alkohol">Alkohol</string>
    <string name="product_year">Årgang</string>
    <string name="product_district">Distrikt</string>
    <string name="product_producer">Produsent</string>
    <string name="product_packaging">Emballasjetype</string>
    <string name="product_fairtrade">Fairtrade</string>
    <string name="product_color">Farge</string>
    <string name="product_glutenLow">Lav på gluten</string>
    <string name="product_wholesaler">Grossist</string>
    <string name="product_korktype">Korktype</string>
    <string name="product_kosher">Kosher</string>
    <string name="product_storage">Lagringsgrad</string>
    <string name="product_country">Land</string>
    <string name="product_smell">Lukt</string>
    <string name="product_method">Metode</string>
    <string name="product_category">Butikkategori</string>
    <string name="product_type">Varetype</string>
    <string name="product_enviromentalPackage">Miljosmart emballasje</string>
    <string name="product_Organic">Økologisk</string>
    <string name="product_webBtn">Se i nettbutikk</string>

    <!-- other -->
    <string name="centiLiter">Cl</string>
    <string name="currency">Kr</string>
    <string name="scan_for_product">Skann strekkode</string>
    <string name="login_info">Logg inn for å få tilgang til en masse kule funksjoner!</string>
    <string name="yes_please">Ja takk</string>
    <string name="hello">Hei</string>
    <string name="my_account_message">Her finnner du lister du har opprettet, produktene du har sett på sist og alle anmeldelsene dine.</string>
    <string name="history">Historikk</string>
    <string name="lists">Lister</string>
    <string name="reviews">Anmeldelser</string>
    <string name="logout">Logg ut</string>
    <string name="settings">Innstillinger</string>
    <string name="empty_message">Her var det tomt, gitt..</string>
    <string name="no_results">Vi fant ingen produkter</string>
    <string name="create_name">Gi deg selv et navn for å skrive anmeldelser</string>
    <string name="nearest_shop">Finn din nærmeste butikk</string>
    <string name="no_internet">Ingen internettilkobling</string>
    <string name="try_again">Prøv igjen</string>
    <string name="require_username">Du må ha et navn</string>
    <string name="save">Lagre</string>
    <string name="account_updated">Konto oppdatert</string>
    <string name="change_name">Endre navn</string>
    <string name="no_match">Fant ikke produktet</string>
    <string name="searching_products">Søker etter produkt</string>
    <string name="wrong_barcode">Feil type strekkode</string>
    <string name="choose_theme">Velg tema</string>
    <!-- imageButtons-->
    <string name="filter_button">Produktfilter</string>
    <string name="search_button">Produktsøk</string>
    <string name="scan_button">Produktscan</string>
    <string name="abort">Avbryt</string>
    <string name="update_profile">Oppdater profilen din</string>
    <!-- UserLists -->
    <string name="selectList">Legg til i liste</string>
    <string name="already_exists">Produktet er allerede i</string>
    <string name="add_success">Produktet ble lagt i</string>
    <string name="removed_from_list">ble fjernet fra listen</string>
    <string name="remove_from_list">Fjern fra listen</string>
    <string name="create_new_list">Lag ny liste</string>
    <string name="remove_list">Slett liste</string>
    <string name="changeList">Endre listenavn</string>
    <string name="list_change_success">Navnet ble endret!</string>
    <string name="confirm_delete_list">Er du sikker på at du vil slette denne listen?</string>
    <string name="require_name">Du må gi listen et navn</string>
    <string name="list_require_login">Du må være logget inn for å bruke lister</string>
    <string name="have_no_lists">Du har ingen lister ennå</string>
    <string name="add_lists">Legg til lister ved å trykke på knappen nede i hjørnet</string>
    <string name="list_hint">Navn på liste</string>
    <!--Filter-->
    <string name="one_filter_limit">Bare en verdi om gangen</string>
    <string name="not_combine_search">Dette filteret kan ikke kombinere med søk, dessverre</string>
    <string name="fields_can_not_combine">Disse filtrene kan ikke kombineres</string>
    <string name="search_product">Søk på produktnavn</string>
    <string name="use">Bruk</string>
    <string name="wont_work">Det går ikke, det skjønner du også</string>
    <!--Reviews-->
    <string name="product_reviewBtn">Anmeld</string>
    <string name="remove_review">Slett anmeldelse</string>
    <string name="confirm_delete_review">Er du sikker på at du vil slette denne anmeldelsen?</string>
    <string name="already_reviewed">Du har allerede anmeldt dette produktet</string>
    <string name="review_success">Din anmeldelse er registrert!</string>
    <string name="show_reviews">Vis kommentarer</string>
    <string name="tell_others_what_you_think">Fortell andre hva du syns!</string>
    <string name="write_comment">Skriv en kommentar</string>
    <string name="no_reviews">Ingen anmeldelser</string>
    <string name="review">anmeldelse</string>
    <string name="require_comment">Du må skrive en kommentar</string>
    <string name="empty_reviews">Skriv en anmeldelse til et produkt så dukker det opp her</string>

    <!-- Has been fetched from Firestore. Did not have the time to implement automatic fetch -->
    <string-array name="productCategories">
        <item>Akevitt</item>
        <item>Alkoholfri leskedrikk</item>
        <item>Alkoholfri most</item>
        <item>Alkoholfri musserende drikk</item>
        <item>Alkoholfri vin</item>
        <item>Alkoholfritt øl</item>
        <item>Alkoholfritt, øvrig</item>
        <item>Aromatisert vin</item>
        <item>Barley wine</item>
        <item>Bitter</item>
        <item>Brennevin, annet</item>
        <item>Brown ale</item>
        <item>Champagne extra brut</item>
        <item>Champagne, annen</item>
        <item>Champagne, brut</item>
        <item>Champagne, rosé</item>
        <item>Champagne, sec</item>
        <item>Druebrennevin</item>
        <item>Fruktbrennevin</item>
        <item>Fruktvin</item>
        <item>Genever</item>
        <item>Gin</item>
        <item>Hveteøl</item>
        <item>Hvitvin</item>
        <item>India pale ale</item>
        <item>Klosterstil</item>
        <item>Likør</item>
        <item>Lys ale</item>
        <item>Lys lager</item>
        <item>Madeira</item>
        <item>Mjød</item>
        <item>Musserende vin</item>
        <item>Musserende vin, rosé</item>
        <item>Mørk lager</item>
        <item>Pale ale</item>
        <item>Perlende vin, hvit</item>
        <item>Perlende vin, rosé</item>
        <item>Perlende vin, rød</item>
        <item>Portvin</item>
        <item>Red/amber</item>
        <item>Rom</item>
        <item>Rosévin</item>
        <item>Rødvin</item>
        <item>Saison farmhouse ale</item>
        <item>Sake</item>
        <item>Scotch ale</item>
        <item>Sherry</item>
        <item>Sider</item>
        <item>Spesial</item>
        <item>Sterkvin, annen</item>
        <item>Surøl</item>
        <item>Vermut</item>
        <item>Vodka</item>
        <item>Whisky</item>
    </string-array>

    <string-array name="productCountries">
        <item>Amer. Jomfruøy.</item>
        <item>Antillene</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Barbados</item>
        <item>Belgia</item>
        <item>Bermuda</item>
        <item>Bosnia-Herceg.</item>
        <item>Brasil</item>
        <item>Brit. Jomfruøy.</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Danmark</item>
        <item>Dominik. rep.</item>
        <item>EU</item>
        <item>England</item>
        <item>Estland</item>
        <item>Finland</item>
        <item>Frankrike</item>
        <item>Georgia</item>
        <item>Guatemala</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Hellas</item>
        <item>India</item>
        <item>Irland</item>
        <item>Island</item>
        <item>Israel</item>
        <item>Italia</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Kroatia</item>
        <item>Latvia</item>
        <item>Libanon</item>
        <item>Litauen</item>
        <item>Luxemburg</item>
        <item>Makedonia</item>
        <item>Marokko</item>
        <item>Martinique</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Montenegro</item>
        <item>Nederland</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Norge</item>
        <item>Panama</item>
        <item>Peru</item>
        <item>Polen</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Romania</item>
        <item>Russland</item>
        <item>Serbia</item>
        <item>Skottland</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spania</item>
        <item>Storbritannia</item>
        <item>Sveits</item>
        <item>Sverige</item>
        <item>Sør-Afrika</item>
        <item>Sør-Korea</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Trinidad,Tobago</item>
        <item>Tsjekkia</item>
        <item>Tyrkia</item>
        <item>Tyskland</item>
        <item>USA</item>
        <item>Ukraina</item>
        <item>Ungarn</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
        <item>Wales</item>
        <item>Østerrike</item>
        <item>Øvrige</item>
    </string-array>

    <!--Spinner themes-->
    <string-array name="themes">
        <item>Standard</item>
        <item>Natt</item>
        <item>Vin</item>
        <item>Champagne</item>
    </string-array>

    <string-array name="eatWith">
        <item>Dessert</item>
        <item>Fisk</item>
        <item>Lyst kjøtt</item>
        <item>Lam og sau</item>
        <item>Ost</item>
        <item>Skalldyr</item>
        <item>Smavilt</item>
        <item>Storfe</item>
        <item>Storvilt</item>
        <item>Svinekjøtt</item>
        <item>Aperitiff</item>
    </string-array>
</resources>
