<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <Button
        android:id="@+id/listsButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="?attr/colorButton"
        android:backgroundTintMode="src_atop"
        android:drawableTop="@drawable/list_dynamic"
        android:padding="16dp"
        android:text="@string/lists"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentButton" />

    <Button
        android:id="@+id/reviewsButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorButton"
        android:drawableTop="@drawable/review_dynamic"
        android:padding="16dp"
        android:text="@string/reviews"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/recentButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="551dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorButton"
        android:drawableTop="@drawable/logout_dynamic"
        android:elevation="5dp"
        android:foregroundTint="?attr/colorSecondaryText"
        android:padding="8dp"
        android:text="@string/logout"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorButton"
        android:contentDescription="@string/settings"
        android:elevation="3dp"
        android:tint="?attr/colorSecondaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logOutButton"
        app:srcCompat="@drawable/theme" />

    <Button
        android:id="@+id/recentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorButton"
        android:drawableTop="@drawable/history_dynamic"
        android:padding="8dp"
        android:text="@string/history"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/welcomeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="?attr/colorSecondaryText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/my_account_message"
        android:textAlignment="center"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintBottom_toTopOf="@+id/recentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeField"
        app:layout_constraintVertical_bias="0.26" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="?attr/colorButton"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/options_dynamic" />

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:elevation="5dp"
        android:drawableTop="@drawable/map_dynamic"
        android:backgroundTint="?attr/colorButton"
        android:text="@string/nearest_shop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listsButton" />


</android.support.constraint.ConstraintLayout>